--- a/package.json
+++ b/package.json
@@ -22,5 +22,20 @@
   "bugs": {
     "url": "https://github.com/AgtLucas/react-ruby/issues"
   },
-  "homepage": "https://github.com/AgtLucas/react-ruby#readme"
+  "homepage": "https://github.com/AgtLucas/react-ruby#readme",
+  "dependencies": {
+    "prop-types": "^15.5.10",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-env": "^1.5.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.24.1",
+    "standard": "^10.0.2"
+  }
 }
