--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "React component for ruby tag",
   "main": "dist/Ruby.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "babel src --out-dir dist"
   },
   "repository": {
     "type": "git",
