--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "React component for ruby tag",
   "main": "dist/Ruby.js",
   "scripts": {
-    "prepublish": "babel src --out-dir dist"
+    "prepublish": "babel src --out-dir dist",
+    "format": "prettier-standard 'src/**/*.js'"
   },
   "repository": {
     "type": "git",
